<resources>
    <string name="app_name">Doma</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">sign up</string>
    <string name="go_to_sign_up">go to sign up</string>
    <string name="sign_in">sign in</string>
    <string name="kitchen">Kitchen</string>
    <string name="smooking_room">Smooking Room</string>
    <string name="profile">Profile</string>

    <string name="nav_open" />
    <string name="nav_close">Close navigation Drawer</string>
    <string name="title_activity_drawer_navigation">DrawerNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_calendar">Calendar</string>
    <string name="enter_username">enter username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="log_out">Log out</string>

    <string-array name="date_array">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Day after Tomorrow</item>
    </string-array>
</resources>
